<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PersonalityFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:scaleType="fitXY"
                    android:src="@drawable/personality" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="start"
                        android:padding="20dp"
                        android:text="@string/personality_page_header"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="30dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/personality_page_body"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/rounded_cornor"
                        android:capitalize="characters"
                        android:padding="10dp"
                        android:text="@string/btn_addToProfile"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/rounded_cornor"
                        android:capitalize="characters"
                        android:padding="10dp"
                        android:text="@string/skip_button"
                        android:textColor="@color/white"
                        android:textSize="20dp" />


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>